# my-text-aid-server

./: README.md  my-text-aid-server.cabal
src/: Main.hs  MyTextAidServer.hs
src/MyTextAidServer/: Internal.hs
test/: MyTextAidServerSpec.hs
