Name:                   my-text-aid-server
Version:                0.0.0
Author:                 Yuji Yamamoto <whosekiteneverfly@gmail.com>
Maintainer:             Yuji Yamamoto <whosekiteneverfly@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               TextAid server for me.
Description:            TextAid(https://chrome.google.com/webstore/detail/textaid/ppoadiihggafnhokfkpphojggcdigllp) server for me. I wanted to try Scotty.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Executable my-text-aid-server
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:          base
                        , scotty
                        , temporary
                        , process

Source-Repository head
  Type:                 git
  Location:             https://github.com/igrep/my-text-aid-server
